--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "!./node_modules/**/*.ts"
     ],
     "files": [
+        "./examples/sync.d.ts",
         "./examples/sync.ts",
         "./index.d.ts",
         "./index.ts",
