--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,20 +36,19 @@
         "./lib/EventQueue.ts",
         "./lib/async-event.d.ts",
         "./lib/async-event.ts",
-        "./lib/listenable.d.ts",
-        "./lib/listenable.ts",
+        "./lib/base-event.d.ts",
+        "./lib/base-event.ts",
         "./lib/queued-event.d.ts",
         "./lib/queued-event.ts",
         "./lib/sync-event.d.ts",
         "./lib/sync-event.ts",
         "./test/test-async-event.d.ts",
         "./test/test-async-event.ts",
+        "./test/test-base-event.ts",
         "./test/test-event-queue.d.ts",
         "./test/test-event-queue.ts",
         "./test/test-index.d.ts",
         "./test/test-index.ts",
-        "./test/test-listenable.d.ts",
-        "./test/test-listenable.ts",
         "./test/test-queued-event.d.ts",
         "./test/test-queued-event.ts",
         "./test/test-sync-event.d.ts",
