--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# node modules and temp output
 /coverage
 /node_modules
 *.d.ts
+!ts-events.d.ts
+
