--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "ts-events",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Various EventEmitter event replacements with synchronous, a-synchronous, and queued events. Made in TypeScript so usable with JavaScript and TypeScript.",
   "main": "index.js",
   "homepage": "https://github.com/rogierschouten/ts-events",
   "bugs": {
     "url": "https://github.com/rogierschouten/ts-events/issues",
     "email": "github@workingcode.ninja"
+  },
+  "repository": { 
+    "type" : "git",
+    "url" : "https://github.com/rogierschouten/ts-events.git"
   },
   "typescript": {
     "definition": "ts-events.d.ts"
