--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,14 +32,18 @@
         "./examples/sync.ts",
         "./index.ts",
         "./lib/EventQueue.ts",
+        "./lib/any-event.ts",
         "./lib/async-event.ts",
         "./lib/base-event.ts",
+        "./lib/objects.ts",
         "./lib/queued-event.ts",
         "./lib/sync-event.ts",
+        "./test/test-any-event.ts",
         "./test/test-async-event.ts",
         "./test/test-base-event.ts",
         "./test/test-event-queue.ts",
         "./test/test-index.ts",
+        "./test/test-objects.ts",
         "./test/test-queued-event.ts",
         "./test/test-sync-event.ts"
     ]
