--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "scripts": {
         "preinstall": "npm install autodts",
         "postinstall": "autodts link",
-        "prepublish": "tsc && autodts generate"
+        "prepublish": "typedoc --out ./dist/doc  -m commonjs --target es5 src/index.ts ./src/lib/*.ts && tsc && autodts generate"
     },
     "keywords": [
         "Event",
