--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
         "type": "git",
         "url": "https://github.com/rogierschouten/ts-events.git"
     },
-    "typescript": {
-        "definition": "index.d.ts"
-    },
+    "typings": "./dist/index.d.ts",
     "scripts": {
-        "preinstall": "npm install autodts",
-        "postinstall": "autodts link",
-        "prepublish": "typedoc --out ./dist/doc  -m commonjs --target es5 src/index.ts ./src/lib/*.ts && tsc && autodts generate"
+        "prepublish": "typedoc --out ./dist/doc  -m commonjs --target es5 src/index.ts ./src/lib/*.ts && tsc"
     },
     "keywords": [
         "Event",
@@ -40,20 +36,15 @@
         "email": "github@workingcode.ninja"
     },
     "license": "ISC",
-    "dependencies": {
-        "autodts": "0.0.6"
-    },
     "devDependencies": {
-        "@lib/autodts-generator": "^0.0.1",
         "assert": "^1.3.0",
         "chai": "^2.3.0",
-        "dts-bundle": "^0.2.0",
         "istanbul": "^0.4.2",
         "mocha": "^2.2.4",
         "source-map-support": "^0.2.10",
         "tslint": "^3.3.0",
         "typedoc": "^0.3.3",
-        "typescript": "^1.7.5",
+        "typescript": "^1.8.0",
         "util": "^0.10.3"
     }
 }
