--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-    "version": "1.5.0-alpha",
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
@@ -8,7 +7,7 @@
         "removeComments": false,
         "noLib": false,
         "sourceMap": true,
-        "outDir": "dist"
+        "outDir": "./dist"
     },
     "formatCodeOptions": {
         "indentSize": 4,
@@ -25,6 +24,6 @@
         "placeOpenBraceOnNewLineForControlBlocks": false
     },
     "files": [
-        "src/index.ts"
+        "./src/index.ts"
     ]
 }
