--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,19 @@
 node_modules/
-*.d.ts
 *.log
 *.tgz
 
-!index.d.ts
-!index.ref.d.ts
+
+built
+doc
+lib/README.md
+scripts
+src
+tests
+internal
+tslint.json
+Jakefile.js
+.editorconfig
+.gitattributes
+.settings/
+.travis.yml
+.vscode/
