--- a/package.json
+++ b/package.json
@@ -1,50 +1,52 @@
 {
-    "name": "ts-events",
-    "version": "3.0.0",
-    "description": "Various EventEmitter event replacements with synchronous, a-synchronous, and queued events. Made in TypeScript so usable with JavaScript and TypeScript.",
-    "main": "dist/index.js",
-    "homepage": "https://github.com/rogierschouten/ts-events",
-    "bugs": {
-        "url": "https://github.com/rogierschouten/ts-events/issues",
-        "email": "github@workingcode.ninja"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/rogierschouten/ts-events.git"
-    },
-    "typings": "./dist/index.d.ts",
-    "scripts": {
-        "prepublish": "typedoc --out ./dist/doc  -m commonjs --target es5 src/index.ts ./src/lib/*.ts && tsc"
-    },
-    "keywords": [
-        "Event",
-        "Events",
-        "Signal",
-        "Signals",
-        "EventEmitter",
-        "event loop",
-        "eventloop",
-        "event queue",
-        "synchronous",
-        "a-synchronous",
-        "asynchronous",
-        "TypeScript",
-        "Callback"
-    ],
-    "author": {
-        "name": "Rogier Schouten",
-        "email": "github@workingcode.ninja"
-    },
-    "license": "ISC",
-    "devDependencies": {
-        "assert": "^1.3.0",
-        "chai": "^2.3.0",
-        "istanbul": "^0.4.2",
-        "mocha": "^2.2.4",
-        "source-map-support": "^0.2.10",
-        "tslint": "^3.3.0",
-        "typedoc": "^0.3.3",
-        "typescript": "^1.8.0",
-        "util": "^0.10.3"
-    }
+  "name": "ts-events",
+  "version": "3.0.0",
+  "description": "Various EventEmitter event replacements with synchronous, a-synchronous, and queued events. Made in TypeScript so usable with JavaScript and TypeScript.",
+  "main": "./dist/index.js",
+  "homepage": "https://github.com/rogierschouten/ts-events",
+  "bugs": {
+    "url": "https://github.com/rogierschouten/ts-events/issues",
+    "email": "github@workingcode.ninja"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rogierschouten/ts-events.git"
+  },
+  "typings": "./dist/index.d.ts",
+  "scripts": {
+      "build": "./node_modules/.bin/tsc"
+  },
+  "keywords": [
+    "Event",
+    "Events",
+    "Signal",
+    "Signals",
+    "EventEmitter",
+    "event loop",
+    "eventloop",
+    "event queue",
+    "synchronous",
+    "a-synchronous",
+    "asynchronous",
+    "TypeScript",
+    "Callback"
+  ],
+  "author": {
+    "name": "Rogier Schouten",
+    "email": "github@workingcode.ninja"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "util": "^0.10.3"      
+  },
+  "devDependencies": {
+    "assert": "^1.3.0",
+    "chai": "^2.3.0",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.2.4",
+    "source-map-support": "^0.2.10",
+    "tslint": "^3.3.0",
+    "typedoc": "^0.3.3",
+    "typescript": "^1.7.5"
+  }
 }
