--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "typings": "./dist/index.d.ts",
   "scripts": {
-      "build": "./node_modules/.bin/tsc"
+      "build": "./node_modules/.bin/tsc",
+      "test": "mocha ./dist/test/test-*.js"
   },
   "keywords": [
     "Event",
@@ -37,7 +38,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "util": "^0.10.3"      
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "assert": "^1.3.0",
