Ensure we can clean, lint, build, and test.

--- a/.npmignore
+++ b/.npmignore
@@ -1,19 +1,11 @@
-node_modules/
-*.log
-*.tgz
-
-
-built
-doc
-lib/README.md
-scripts
-src
-tests
-internal
-tslint.json
-Jakefile.js
-.editorconfig
-.gitattributes
 .settings/
-.travis.yml
 .vscode/
+node_modules/
+src/
+typings/
+.gitattributes
+.gitignore
+.editorconfig
+DEVELOPING.md
+tsconfig.json
+tslint.json
