--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "typings": "./dist/index.d.ts",
   "scripts": {
-    "clean": "./node_modules/.bin/rimraf ./dist",
+    "clean": "./node_modules/.bin/rimraf ./dist ./temp",
     "build": "./node_modules/.bin/tsc",
     "lint": "./node_modules/.bin/tslint -c ./tslint.json ./src/**/*.ts",
     "test": "./node_modules/.bin/mocha ./dist/test/test-*.js",
     "cover": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
-    "prepublish": "npm run clean && npm run lint && npm run build && npm run test"
+    "browserify": "node ./browserify.js",
+    "karma": "./node_modules/.bin/karma start --single-run",
+    "browma": "npm run browserify && npm run karma",
+    "prepublish": "npm run clean && npm run lint && npm run build && npm run test && npm run browma"
   },
   "keywords": [
     "Event",
@@ -46,8 +49,16 @@
   },
   "devDependencies": {
     "assert": "^1.3.0",
+    "browserify": "^13.0.0",
     "chai": "^2.3.0",
+    "glob": "^7.0.0",
     "istanbul": "^0.4.2",
+    "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.2",
+    "karma-mocha-reporter": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^2.2.4",
     "rimraf": "^2.5.2",
     "source-map-support": "^0.2.10",
