--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "email": "github@workingcode.ninja"
   },
   "license": "ISC",
-  "dependencies": {
-    "util": "^0.10.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "assert": "^1.3.0",
     "browserify": "^13.0.0",
@@ -63,6 +61,7 @@
     "rimraf": "^2.5.2",
     "source-map-support": "^0.2.10",
     "tslint": "^3.3.0",
-    "typescript": "^1.7.5"
+    "typescript": "^1.7.5",
+    "util": "^0.10.3"
   }
 }
