--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "ts-events",
-  "version": "3.0.1",
+  "version": "3.1.0",
   "description": "Various EventEmitter event replacements with synchronous, a-synchronous, and queued events. Made in TypeScript so usable with JavaScript and TypeScript.",
-  "main": "./dist/index.js",
   "homepage": "https://github.com/rogierschouten/ts-events",
   "bugs": {
     "url": "https://github.com/rogierschouten/ts-events/issues",
@@ -12,18 +11,21 @@
     "type": "git",
     "url": "https://github.com/rogierschouten/ts-events.git"
   },
-  "typings": "./dist/index.d.ts",
+  "main": "./dist/lib/index.js",
+  "typings": "./dist/lib/index.d.ts",
   "scripts": {
-    "clean": "./node_modules/.bin/rimraf ./dist ./temp",
-    "tsc": "./node_modules/.bin/tsc",
+    "clean": "./node_modules/.bin/rimraf ./dist ./temp ./examples/browser-amd-requirejs/ts-events.js",
     "lint": "./node_modules/.bin/tslint -c ./tslint.json ./src/**/*.ts",
-	"build": "npm run lint && npm run tsc",
+    "tsc": "./node_modules/.bin/tsc",
+    "umd": "node browserify-umd.js",
+    "minify": "node minify-umd.js",
+    "build": "npm run lint && npm run tsc && npm run umd && npm run minify",
     "test": "./node_modules/.bin/mocha ./dist/test/test-*.js",
     "cover": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
-    "browserify": "node ./browserify.js",
-    "karma": "./node_modules/.bin/karma start --single-run",
-    "browma": "npm run browserify && npm run karma",
-    "all": "npm run clean && npm run build && npm run test && npm run browma"
+    "bundle_tests": "node browserify-karma.js",
+    "exec_karma": "./node_modules/.bin/karma start --single-run",
+    "karma": "npm run bundle_tests && npm run exec_karma",
+    "all": "npm run clean && npm run build && npm run test && npm run karma"
   },
   "keywords": [
     "Event",
@@ -49,6 +51,7 @@
   "devDependencies": {
     "assert": "^1.3.0",
     "browserify": "^13.0.0",
+    "browserify-umdify": "^1.0.3",
     "chai": "^2.3.0",
     "glob": "^7.0.0",
     "istanbul": "^0.4.2",
@@ -63,6 +66,7 @@
     "source-map-support": "^0.2.10",
     "tslint": "^3.3.0",
     "typescript": "^1.7.5",
+    "uglify-js": "^2.6.2",
     "util": "^0.10.3"
   }
 }
