--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
         "placeOpenBraceOnNewLineForControlBlocks": false
     },
     "files": [
-        "src/index.ts",
+        "src/lib/index.ts",
         "src/lib/any-event.ts",
         "src/lib/async-event.ts",
         "src/lib/base-event.ts",
