--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
         "declaration": true,
+        "inlineSourceMap": true,
+        "module": "commonjs",
         "noImplicitAny": true,
-        "removeComments": false,
-        "sourceMap": true,
-        "outDir": "./dist",
         "noLib": false,
-        "preserveConstEnums": true
+        "outDir": "./dist",
+        "preserveConstEnums": true,
+        "removeComments": false,
+        "target": "es5"
     },
     "formatCodeOptions": {
         "indentSize": 4,
