--- a/package.json
+++ b/package.json
@@ -47,26 +47,32 @@
     "email": "github@workingcode.ninja"
   },
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@types/node": "^6.0.51"
+  },
   "devDependencies": {
-    "assert": "^1.3.0",
-    "browserify": "^13.0.0",
+    "@types/assert": "0.0.31",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.33",
+    "@types/source-map-support": "^0.2.28",
+    "assert": "^1.4.1",
+    "browserify": "^13.1.1",
     "browserify-umdify": "^1.0.3",
-    "chai": "^2.3.0",
-    "glob": "^7.0.0",
-    "istanbul": "^0.4.2",
-    "karma": "^0.13.21",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^1.2.0",
+    "chai": "^3.5.0",
+    "glob": "^7.1.1",
+    "istanbul": "^0.4.5",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^2.2.4",
-    "rimraf": "^2.5.2",
-    "source-map-support": "^0.2.10",
-    "tslint": "^3.3.0",
-    "typescript": "^1.7.5",
-    "uglify-js": "^2.6.2",
+    "mocha": "^3.2.0",
+    "rimraf": "^2.5.4",
+    "source-map-support": "^0.4.6",
+    "tslint": "^4.0.2",
+    "typescript": "^2.0.10",
+    "uglify-js": "^2.7.4",
     "util": "^0.10.3"
   }
 }
