--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   ],
   "author": {
     "name": "Rogier Schouten",
+	"url": "https://github.com/rogierschouten/",
     "email": "github@workingcode.ninja"
   },
   "license": "ISC",
