--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-events",
-  "version": "3.1.4",
+  "version": "3.1.5",
   "description": "Various EventEmitter event replacements with synchronous, a-synchronous, and queued events. Made in TypeScript so usable with JavaScript and TypeScript.",
   "homepage": "https://github.com/rogierschouten/ts-events",
   "bugs": {
@@ -44,17 +44,16 @@
   ],
   "author": {
     "name": "Rogier Schouten",
-	"url": "https://github.com/rogierschouten/",
+    "url": "https://github.com/rogierschouten/",
     "email": "github@workingcode.ninja"
   },
   "license": "ISC",
-  "dependencies": {
-    "@types/node": "^6.0.51"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/assert": "0.0.31",
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.33",
+    "@types/node": "^7.0.0",
     "@types/source-map-support": "^0.2.28",
     "assert": "^1.4.1",
     "browserify": "^13.1.1",
