--- a/package.json
+++ b/package.json
@@ -48,31 +48,32 @@
     "email": "github@workingcode.ninja"
   },
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
-    "@types/assert": "^1.4.3",
-    "@types/chai": "^4.2.4",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.3",
-    "@types/source-map-support": "^0.5.0",
+    "@types/assert": "^1.4.6",
+    "@types/chai": "^4.2.8",
+    "@types/mocha": "^7.0.1",
+    "@types/node": "^13.7.0",
+    "@types/source-map-support": "^0.5.1",
     "assert": "^2.0.0",
     "browserify": "^16.5.0",
     "browserify-umdify": "^1.0.4",
     "chai": "^4.2.0",
-    "glob": "^7.1.5",
+    "glob": "^7.1.6",
     "istanbul": "^0.4.5",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-firefox-launcher": "^1.2.0",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "mkdirp": "^0.5.1",
-    "mocha": "^6.2.2",
-    "rimraf": "^3.0.0",
+    "mkdirp": "^1.0.3",
+    "mocha": "^7.0.1",
+    "rimraf": "^3.0.1",
     "source-map-support": "^0.5.16",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4",
-    "uglify-js": "^3.6.5",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5",
+    "uglify-js": "^3.7.7",
     "util": "^0.12.1"
   }
 }
