--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   "main": "./dist/lib/index.js",
   "typings": "./dist/lib/index.d.ts",
   "scripts": {
-    "clean": "./node_modules/.bin/rimraf ./dist ./temp ./examples/browser-amd-requirejs/ts-events.js",
-    "lint": "./node_modules/.bin/tslint -c ./tslint.json ./src/**/*.ts",
-    "tsc": "./node_modules/.bin/tsc",
+    "clean": "rimraf ./dist ./temp ./examples/browser-amd-requirejs/ts-events.js",
+    "lint": "tslint -c ./tslint.json ./src/**/*.ts",
+    "tsc": "tsc",
     "umd": "node browserify-umd.js",
     "minify": "node minify-umd.js",
     "build": "npm run lint && npm run tsc && npm run umd && npm run minify",
-    "test": "./node_modules/.bin/mocha ./dist/test/test-*.js",
-    "cover": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- ./dist/test/*.js",
+    "test": "mocha ./dist/test/test-*.js",
+    "cover": "nyc --check-coverage mocha \"./dist/test/test-*.js\"",
     "bundle_tests": "node browserify-karma.js",
-    "exec_karma": "./node_modules/.bin/karma start --single-run",
+    "exec_karma": "karma start --single-run",
     "karma": "npm run bundle_tests && npm run exec_karma",
-    "all": "npm run clean && npm run build && npm run test && npm run karma"
+    "all": "npm run clean && npm run build && npm run cover && npm run karma"
   },
   "keywords": [
     "Event",
@@ -48,8 +48,7 @@
     "email": "github@workingcode.ninja"
   },
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/assert": "^1.4.6",
     "@types/chai": "^4.2.8",
@@ -61,14 +60,14 @@
     "browserify-umdify": "^1.0.4",
     "chai": "^4.2.0",
     "glob": "^7.1.6",
-    "istanbul": "^0.4.5",
-    "karma": "^4.4.1",
+    "karma": "^5.0.5",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "mkdirp": "^1.0.3",
-    "mocha": "^7.0.1",
+    "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
     "rimraf": "^3.0.1",
     "source-map-support": "^0.5.16",
     "tslint": "^6.0.0",
